@@ -4,69 +4,147 @@
 	
 	<parent>
         <groupId>drone.modularized</groupId>
-        <artifactId>drone-modularized</artifactId>
+        <artifactId>drone-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 	
     <artifactId>drone-test-module</artifactId>
 
     <properties>
-        <java.version>9</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-
         <!--<jacoco.reportPath>${project.basedir}/target/jacoco.exec</jacoco.reportPath>-->
 
         <jacoco.version>0.8.1</jacoco.version>
-        <powermock.version>2.0.0-beta.5</powermock.version>
         <mockito2.version>2.18.0</mockito2.version>
         <build-helper-maven-plugin>1.9.1</build-helper-maven-plugin>
         <maven-javadoc-plugin>3.0.0</maven-javadoc-plugin>
         <apache-maven-plugins>2.18.1</apache-maven-plugins>
         <junit.version>4.12</junit.version>
        
-        <!--It will be used to locate the file to be used
-        <build.profile.id>dev</build.profile.id>-->
+        <!--It will be used to locate the file to be used-->
+        <build.profile.id>dev</build.profile.id>
 
-        <!--By default, only unit tests will be executed
+        <!--By default, only unit tests will be executed-->
         <skip.integration.tests>true</skip.integration.tests>
-        <skip.unit.tests>false</skip.unit.tests>-->
+        <skip.unit.tests>false</skip.unit.tests>
     </properties>
 
-    <!--<profiles>
+    <profiles>
         <profile>
             <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>${jacoco.version}</version>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>post-unit-test</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <!--Sets the path to the file which contains the execution data.-->
+                                    <dataFile>target/jacoco.exec</dataFile>
+                                    <!--Sets the output directory for the code coverage report.-->
+                                    <outputDirectory>target/jacoco-ut</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <configuration>
+                                    <tasks>
+                                        <replace file="target/jacoco-ut/jacoco.xml" token="com/" value="src/main/java/com/"/>
+                                    </tasks>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>integration-test</id>
             <properties>
                 <build.profile.id>integration-test</build.profile.id>
-                 Only integration tests will be executed
                 <skip.integration.tests>false</skip.integration.tests>
                 <skip.unit.tests>true</skip.unit.tests>
             </properties>
         </profile>
-    </profiles>-->
+        <profile>
+            <id>j9</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.6.0</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>--module-path</argument>
+                                <modulepath/>
+                                <argument>--add-modules</argument>
+                                <argument>com.drone.test</argument>
+                                <argument>--module</argument>
+                                <argument>junit/org.junit.runner.JUnitCore</argument>
+                                <argument>com.drone.test.driver.DriverUTest</argument>
+                                <argument>com.drone.test.service.UrbanizationsTreatmentServiceUTest</argument>
+                                <argument>com.drone.test.service.UrbanizationsTreatmentSimulatedServiceUTest</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <build>
-
-        <!--<sourceDirectory>../../SourceMik</sourceDirectory>  tested sources root, in proper layout: src/main/java -->
-        <!--<outputDirectory>../drone-test-module/target/classes</outputDirectory>  tested classes root, in proper layout: target/classes -->
-
-
-
+        <sourceDirectory>../drone-module/src/main/java</sourceDirectory>
         <finalName>DroneTest</finalName>
-        <!--<filters>
-            <filter>profiles/${build.profile.id}/config.properties</filter>
+        <filters>
+            <filter>../profiles/${build.profile.id}/config.properties</filter>
         </filters>
         <resources>
             <resource>
                 <filtering>true</filtering>
                 <directory>../drone-module/src/main/resources</directory>
             </resource>
-        </resources>-->
+        </resources>
         <plugins>
-            <!--<plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>${build-helper-maven-plugin}</version>
@@ -112,112 +190,26 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>-->
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>post-unit-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                             <!--Sets the path to the file which contains the execution data.-->
-                            <dataFile>target/jacoco.exec</dataFile>
-                             <!--Sets the output directory for the code coverage report.-->
-                            <outputDirectory>target/jacoco-ut</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
-    <!--
-    <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-            <execution>
-                <phase>test</phase>
-                <configuration>
-                    <tasks>
-                        <replace file="target/jacoco-ut/jacoco.xml" token="com/" value="src/main/java/com/"/>
-                    </tasks>
-                </configuration>
-                <goals>
-                    <goal>run</goal>
-                </goals>
-            </execution>
-        </executions>
-    </plugin>-->
-</plugins>
-</build>
+        </plugins>
+    </build>
 
     <dependencies>
-		
 		<dependency>
 			<groupId>drone.modularized</groupId>
 			<artifactId>drone-module</artifactId>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
 		</dependency>
-		
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito2.version}</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-core</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito2</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
-<!--
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven-javadoc-plugin}</version>
-            </plugin>
-        </plugins>
-    </reporting>
--->
 </project>
